--- a/back/.env-example
+++ b/back/.env-example
@@ -1,9 +1,10 @@
 DATABASE_DIALECT=postgres
-DATABASE_USERNAME=
-DATABASE_PASSWORD=
-DATABASE_HOST=postgres.render.com
-DATABASE_NAME=foodie
+DATABASE_USERNAME=backend
+DATABASE_PASSWORD=password
+DATABASE_HOST=localhost
+DATABASE_NAME=foodies
 DATABASE_PORT=5432
+DATABASE_SSL=no
 PORT=3000
 JWT_SECRET=
 JWT_EXPIRES=10m
