Added new model for user's faivorite recipes

--- a/back/.env-example
+++ b/back/.env-example
@@ -5,6 +5,7 @@ DATABASE_HOST=localhost
 DATABASE_NAME=foodies
 DATABASE_PORT=5432
 DATABASE_SSL=no
+DATABASE_SYNC=yes
 PORT=3000
 JWT_SECRET=
 JWT_EXPIRES=10m
