--- a/back/package.json
+++ b/back/package.json
@@ -33,6 +33,8 @@
     "multer": "^2.0.1",
     "nanoid": "^5.1.5",
     "pg": "^8.16.3",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0"
   }
 }
