--- a/back/.env-example
+++ b/back/.env-example
@@ -7,5 +7,6 @@ DATABASE_PORT=5432
 DATABASE_SSL=no
 DATABASE_SYNC=yes
 PORT=3000
-JWT_SECRET=
+JWT_SECRET=jwt_secret
 JWT_EXPIRES=10m
+ENVIRONMENT_TYPE=debug
